# ACad

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Capacitor.h  CircuitComponent.cpp  CircuitComponent.h  Coil.h  Resistor.h  Transistor.h  Wire.h
src/ui/: CircuitCanvas.cpp  CircuitCanvas.h
src/util/: Constants.h
